# lightllm

./: pyproject.toml
src/lightllm/: .env  main.py
