[project]
name = "lightllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MadeehaTassadaq", email = "madeehatassadaq@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "crewai>=0.5.0",
    
]

[project.scripts]
lightllm = "lightllm:main"
run_lightllm="lightllm.main:runlight_llm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
